@@ -2,15 +2,49 @@
 # Using $(extra-y) so Makefile.build and Makefile.clean know
 # what they should do (This is part of extra-y's job, actually).
 
-# $(head-y) part defined in arch/x86/Makefile
+# head file
 extra-y := head_32.o
 
 # linker script
-# it will be handled by Makefile.build
 extra-y += vmSandix.ld
-
-extra-y += asm-offset.s
 
 obj-y := setup.o
 obj-y += traps.o
 obj-y += e820.o
+
+define sed-y
+	"/^->/{s:->#\(.*\):/* \1 */:; \
+	s:^->\([^ ]*\) [\$$#]*\([-0-9]*\) \(.*\):#define \1 \2 /* \3 */:; \
+	s:^->\([^ ]*\) [\$$#]*\([^ ]*\) \(.*\):#define \1 \2 /* \3 */:; \
+	s:->::; p;}"
+endef
+
+define filechk_offset
+	(set -e; \
+	 echo "#ifndef $2"; \
+	 echo "#define $2"; \
+	 echo "/*"; \
+	 echo " * DO NOT MODIFY."; \
+	 echo " *"; \
+	 echo " * This file was generated by Kbuild"; \
+	 echo " */"; \
+	 echo ""; \
+	 sed -ne $(sed-y); \
+	 echo ""; \
+	 echo "#endif" )
+endef
+
+##
+# It looks ugly to generate this file here, it should be generated
+# before building the kernel. If doing that, we should compile
+# asm-offset.c first. As you know, make can not handle this, it
+# has a circular dependency.
+#
+# After all, coping the header file into generated directory. Since
+# all generated header files are sleeping there.
+
+extra-y += asm-offset.s asm-offset.h
+
+arch/x86/kernel/asm-offset.h: arch/x86/kernel/asm-offset.s FORCE
+	$(call filechk,offset,_ASM_GENERATED_ASM_OFFSET_H_)
+	@cp $@ include/generated/asm-offset.h
